<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Habit Tracker</string>
    <string name="main_activity_title">Habit Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="add_habit">Add habit</string>
    <string name="color_picker_default_title">Change color</string>

    <string name="toast_habit_created">Habit created.</string>
    <string name="toast_habit_deleted">Habits deleted.</string>
    <string name="toast_habit_restored">Habits restored.</string>
    <string name="toast_nothing_to_undo">Nothing to undo.</string>
    <string name="toast_nothing_to_redo">Nothing to redo.</string>
    <string name="toast_habit_changed">Habit changed.</string>
    <string name="toast_habit_changed_back">Habit changed back.</string>
    <string name="toast_habit_archived">Habits archived.</string>
    <string name="toast_habit_unarchived">Habits unarchived.</string>

    <string name="title_activity_show_habit" translatable="false"/>
    <string name="overview">Overview</string>
    <string name="habit_strength">Habit strength</string>
    <string name="history">History</string>
    <string name="clear">Clear</string>
    <string name="description_hint">Question (Did you … today?)</string>
    <string name="repeat">Repeat</string>
    <string name="times_every">times in</string>
    <string name="days">days</string>
    <string name="reminder">Reminder</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="streaks">Streaks</string>
    <string name="no_habits_found">You have no active habits</string>
    <string name="long_press_to_toggle">Press-and-hold to check or uncheck</string>
    <string name="reminder_off">Off</string>
    <string name="validation_name_should_not_be_blank">Name cannot be blank.</string>
    <string name="validation_number_should_be_positive">Number must be positive.</string>
    <string name="validation_at_most_one_rep_per_day">You can have at most one repetition per day</string>
    <string name="create_habit">Create habit</string>
    <string name="edit_habit">Edit habit</string>
    <string name="check">Check</string>
    <string name="snooze">Later</string>

    <!-- App introduction -->
    <string name="intro_title_1">Welcome</string>
    <string name="intro_description_1">Habit Tracker helps you create and maintain good habits.</string>

    <string name="intro_title_2">Create some new habits</string>
    <string name="intro_description_2">Every day, put a tick on the app when you did the habits.</string>

    <string name="intro_title_3">Keep doing it</string>
    <string name="intro_description_3">Habits performed consistently for a long time will earn a full star.</string>

    <string name="intro_title_4">Track your progress</string>
    <string name="intro_description_4">Detailed habit tracker graphs show how your habits improved over time.</string>

    <string name="interval_15_minutes">15 minutes</string>
    <string name="interval_30_minutes">30 minutes</string>
    <string name="interval_1_hour">1 hour</string>
    <string name="interval_2_hour">2 hours</string>
    <string name="interval_4_hour">4 hours</string>
    <string name="interval_8_hour">8 hours</string>
    <string name="pref_toggle_title">Toggle repetitions with short press</string>
    <string name="pref_toggle_description">More convenient, but might cause accidental toggles.</string>
    <string name="pref_snooze_interval_title">Snooze interval on reminders</string>
    <string name="pref_rate_this_app">Rate this app in Google Play</string>
    <string name="pref_send_feedback">Send feedback to developer</string>
    <string name="pref_view_source_code">View source code at GitHub</string>
    <string name="pref_view_app_introduction">View app introduction</string>
    <string name="links">Links</string>
    <string name="behavior">Behavior</string>
    <string name="name">Name</string>
    <string name="show_archived">Show archived</string>
    <string name="settings">Settings</string>
    <string name="snooze_interval">Snooze interval</string>

    <string name="hint_title">Did you know?</string>
    <string name="hint_drag">To delete entries, please swipe it to the left. To use more option, swipe entries to the right.</string>
    <string name="hint_landscape">You can see more days by putting your phone in landscape mode.</string>
    <string name="delete_habits">Delete Habits</string>
    <string name="delete_habits_message">The habits will be permanently deleted. This action cannot be undone.</string>
    <string name="weekends">Weekends</string>
    <string name="any_weekday">Monday to Friday</string>
    <string name="any_day">Any day of the week</string>
    <string name="select_weekdays">Select days</string>
    <string name="export_to_csv">Export data</string>

    <string name="done_label">Done</string>
    <string name="clear_label">Clear</string>
    <string name="select_hours">Select hours</string>
    <string name="select_minutes">Select minutes</string>

    <string-array name="hints">
        <item>@string/hint_drag</item>
        <item>@string/hint_landscape</item>
    </string-array>

    <string name="frequency">Frequency</string>
    <string name="checkmark">Checkmark</string>

    <string name="number_of_repetitions">Number of repetitions</string>
    <string name="last_x_days">Last %d days</string>
    <string name="last_x_weeks">Last %d weeks</string>
    <string name="last_x_months">Last %d months</string>
    <string name="last_x_years">Last %d years</string>
    <string name="all_time">All time</string>

    <string name="every_day">Every day</string>
    <string name="every_week">Every week</string>
    <string name="two_times_per_week">2 times per week</string>
    <string name="five_times_per_week">5 times per week</string>
    <string name="custom_frequency">Custom …</string>

    <string name="time_next">Next</string>
    <string name="time_prev">Previous</string>
</resources>