<LinearLayout
    android:id="@+id/container"
    style="@style/dialogForm"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.blk.uhabits.fragments.EditHabitFragment"
    tools:ignore="MergeRootFrame">

    <LinearLayout
        android:id="@+id/formPanel"
        style="@style/dialogFormPanel">

        <LinearLayout
            android:id="@+id/namePanel"
            style="@style/dialogFormRow">

            <EditText
                android:id="@+id/input_name"
                style="@style/dialogFormInput"
                android:hint="@string/name">

                <requestFocus/>
            </EditText>

            <ImageButton
                android:id="@+id/buttonPickColor"
                style="@style/dialogFormInputColor"
                android:contentDescription="@string/color_picker_default_title"
                android:src="@drawable/ic_action_color_light"/>
        </LinearLayout>

        <EditText
            android:id="@+id/input_description"
            style="@style/dialogFormInputMultiline"
            android:hint="@string/description_hint"/>

        <LinearLayout
            style="@style/dialogFormRow">

            <TextView
                android:id="@+id/textView1"
                style="@style/dialogFormLabel"
                android:text="@string/repeat"/>

            <Spinner
                android:id="@+id/sFrequency"
                style="@style/dialogFormSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/frequencyQuickSelect"
                android:visibility="gone"/>

            <org.apmem.tools.layouts.FlowLayout
                android:id="@+id/llCustomFrequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:gravity="fill">

                <EditText
                    android:id="@+id/input_freq_num"
                    style="@style/dialogFormInputSmallNumber"/>

                <TextView
                    android:id="@+id/textView3"
                    style="@style/dialogFormText"
                    android:text="@string/times_every"
                    android:gravity="center"/>

                <EditText
                    android:id="@+id/input_freq_den"
                    style="@style/dialogFormInputSmallNumber"/>

                <TextView
                    android:id="@+id/textView5"
                    style="@style/dialogFormText"
                    android:text="@string/days"
                    android:gravity="center_vertical"
                    android:paddingLeft="12dp"/>

            </org.apmem.tools.layouts.FlowLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/reminderPanel"
            style="@style/dialogFormRow">

            <TextView
                android:id="@+id/TextView2"
                style="@style/dialogFormLabel"
                android:text="@string/reminder"/>

            <TextView
                android:id="@+id/inputReminderTime"
                style="@style/dialogFormSpinner"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llReminderDays"
            style="@style/dialogFormRow">

            <TextView
                android:id="@+id/TextView3"
                style="@style/dialogFormLabel"
                android:text=""/>

            <TextView
                android:id="@+id/inputReminderDays"
                style="@style/dialogFormSpinner"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingEnd="16dp"
        android:paddingLeft="0dp"
        android:paddingRight="16dp"
        android:paddingStart="0dp">

        <Button
            android:id="@+id/buttonDiscard"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discard"/>

        <Button
            android:id="@+id/buttonSave"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>
    </LinearLayout>
</LinearLayout>
